--- a/less/media.less
+++ b/less/media.less
@@ -67,9 +67,9 @@
 
 .media-list {
   margin-bottom: 60px;
+  text-align: center;
 
   .media-object {
-    display: inline-block;
     max-width: 90px;
   }
 
@@ -79,10 +79,9 @@
   }
 
   .media-left {
-    display: block;
+    display: inline-block;
     margin-bottom: 30px;
     padding-right: 0;
-    text-align: center;
   }
 
   .media-body {
@@ -104,10 +103,6 @@
 
     .media {
       display: table;
-    }
-
-    .media-left {
-      text-align: left;
     }
 
     .media-body {
